client/src/styles/main.scss
@import "~bootstrap/scss/bootstrap";
@import url('https://fonts.googleapis.com/css2?family=Marko+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500;600;700&display=swap');

// h font-family: ‘Marko One’, serif;
// body font-family: 'Raleway', sans-serif;
// Global
$primaryPink: #F7CAC7;
$primaryBlue: #99CEE3;
$primaryGreen: #9CCA89;
$primaryYellow: #F9D85F;
$primaryGrey: #E8EDE5;
$primaryBrown: #360719; // the  color for the fonts


body {
  color:$primaryBrown;
}


h2 {
  font-family: 'Marko One', serif;
  font-size: 4.5em;
  padding-top: 150px;
}

h3, p {
  font-family: 'Raleway', sans-serif;
}


.hero {
  background-image: url(./images/hero.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: inherit;
  text-align: center;
  color: white;
  padding-bottom: 400px;
  max-height: 900px;
}

.main {
  width: 100%;
}


.hot h2 {
  font-family: "Marko One", serif;
  font-size: 96px;
  padding-top: 150px;
  // letter-spacing:-5px;
  padding-left: inherit;
}

.hot .paragraph p {
  margin-top: 60px;
  font-size: 36px;
  margin-bottom: 30px;
  color: #ffffff;
  width: auto;
}

.btn-outline-light {
  color: #f8f9fa;
  border-color: #f8f9fa;
  height: 54px;
  font-size: 20px;
  font-weight: bold;
}

.btn-warning {
  color: #360719;
  background-color: #F9D85F;
  border-color: #F9D85F;
  height: 54px;
  font-size: 20px;
  font-weight: bold;
  width: 220px;
}

.paragraph span {
  font-weight: bold;
}

// homepage navbar styling
.navbar-left {
  a.navbar-brand {
    color: white;
    font-family: 'Marko One', serif;
    font-size: 2.5em;
  }
}

.navbar-right {
  a.navbar-brand {
    color: white;
  }
  .login-register {
    border: 1px solid white;
    border-radius: 5px;
    padding: 7px;
  }
}

// all other pages nav-bar styling
  // * Made changes for navbar to wrap fully to edges of screen - Daria * //
.nav-container-pages.container-fluid {
    background-color: #F7CAC7;
    padding-bottom: 10px;
    align-items: center;
    width: 100%;
    .navbar-left {
      a {
        color: #360719;
        padding: 20px;
      }
    }
    .navbar-right {
      display: flex;
      font-size: 0.8em;
      a {
        color: #360719;
      }
      .login-register {
        border: 1px solid #360719;
      }
      .login-register:hover {
        color: black;
      } 
  }
}

div.navbar-left {
  font-family: ‘Marko One’, serif;
  
}

// Index page styling
.index-wrapper.container-fluid {
  background-color: $primaryGrey;
  // hero section 
  .align-items-center.index-hero-row.row {
    .index-hero-img {
      background-image: url(./assets/indexpagehero.jpeg);
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
      padding: 100px;
    }
    .index-hero-txt {
      background-color:$primaryPink; //placeholder colour
      text-align: center;
      padding: 100px;
      p {
        padding: 20px;
      }
    }
    h2 {
      font-family: 'Marko One', serif;
      font-size: 4.5em;
      padding-top: 150px;
  }

  //  API section
  // buttons row
    .buttons-row.row {
      .shop-drinks.col {
      display: flex;
      justify-content: flex-start;
      font-weight: 700;
      font-size: 36px;
    }
  
    .sorting-buttons.col-6 {
      display: flex;
      justify-content: flex-start;
    }
  }
}

// api display section on the right
.api-wrapper.container {
  .right-api {
    justify-content: center;
    // overflow-y: scroll;
    .api-row {
      justify-content: center;
      // justify-content: space-between;
    }
    .card {
      max-width: 300px;
      margin-bottom: 30px;
      border: none;
    }
      .card-header {
        background-color:$primaryPink;
      }
      .card-btn {
        text-align: center;
        .btn{
          background-color: $primaryBlue;
          color: $primaryBrown;
          border: none;
        }
      }
    }
}

}





.outer-box {
  max-width: 50%;
  background-color: #F7CAC7;
  border: 2px solid black;
  padding: 20px;
  h2 {
    text-align: center;
    margin: 20px;
    font-family: 'Marko One', serif;
  }
  input {
    margin-bottom: 30px;
  }

  button {
    margin-bottom: 20px;
  }

}


// Becca show styling

.show-drink-breadcrumb {
  margin-top: 20px;
  padding: 0 20px;
  a {
    color: #360719;
    text-decoration: none;
  }
}



// Styling for Show Drink Route
.show-drink {
  .image-text {
    // background-color: #f8f9fa;
    margin: 40px 100px;
    display: flex;
    align-items: center;
    justify-content: center;
  
    .image-container {
      padding: 0;
    }
    max-height: 400px;

      img {
        height: 403px;
        margin: 0 auto;
        display: block;
        object-fit: cover;
      }

    .right {
      padding: 0;
      max-height: 403px;
    }
    .title {
      background-color: #F9D85F;
      padding: 10px 10px;
      h2 {
        padding: 0;
        font-size: 2em;
      }
    }
    h4 {
      font-family: 'Marko One', serif;
      .country-name {
        font-family: 'Raleway', sans-serif;
      }
    }
    .content {
      background-color: #f8f9fa;
      padding: 30px 10px;
      height: 303px;
      p {
        font-size: 1em;
      }
    }
  }
}


// this needs to be wrapped or else it breaks styling on show drink page
div.card-group {
  p {
  margin-top: 30px;
  color: #360719;
  width: 718px;
  word-spacing: 4px;
  font-size: 24px;
  margin-bottom: 60px;
  }
}


// * Homepage styling - Victoria please have a look
// .how-it-works {
//   position: relative;
//   display: flex;
// }
  

// .choice {
//   background-color: rgba(252, 203, 201, 0.25);
//   margin-top: -50px;
//   padding-bottom: 100px;
//   height: 1100px;
// }

// .drink h2 {
//   font-family: "Marko One", serif;
//   color: #360719;
//   font-size: 64px;
//   padding-top: 150px;
//   padding-left: inherit;
//   word-spacing: -10px;
//   margin-top: revert;
// }

// .card-group {
//   max-width: fit-content;
// }
.card-group {
  flex-wrap: inherit;
  width: fit-content;
}

// .card {
//   border: none;
//   background-color: transparent;
// }

// .col-md-8 {
//   padding-left: 110px;
// }

// .col-md-4 {
//   margin-top: 180px;
// }

// .card-group {
//   width: min-content;
// }

// .card:not(:last-child) {
//   margin-right: 30px;
// }
.card:not(:last-child) {
  margin-right: 30px;
}

// .card:not(:first-child) {
//   margin-right: 30px;
// }

// .card-title {
//   font-size: 36px;
//   color: #360719;
//   margin-left: -12px;
//   font-family: "Marko One", serif;
// }

// .card-text:last-child {
//   font-size: 20px;
//   margin-left: -12px;
//   margin-top: revert;
// }

// .room {
//   background-color: #ffffff;
//   padding-bottom: 100px;
//   height: 911px
// }

// .heiss-room h2 {
//   font-family: "Marko One", serif;
//   color: #360719;
//   font-size: 64px;
//   padding-top: 150px;
//   word-spacing: -10px;
//   margin-top: revert;
//   text-align: center;
// }

// .w-100 {
//   width: auto !important; 
// }

.carousel-item {
  display: flex;
  width: auto;
  margin-right: auto;
}

.carousel-item p {
  background-color: #F9D85F;
  border: 3px solid #181c1c;
  display: flex;
  height: 200px;
  max-width: 420px;
  flex-direction: column;
  padding: 1.5rem;
  word-spacing: 0px;
}

.map-container {
  height: calc(100vh - 52px);
  width: 100%;
}

.map-controller {
  position: absolute;
  top: 0;
  left: 0;
  max-width: 220px;
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
  padding: 0.8rem;
  margin: 1rem;
}

.buttons {
  justify-content: space-evenly !important;
}

.marker {
  font-size: 20px;
}

.rocket {
  display: block;
  transform: translateX(-20px);
}

.footer {
  background-image: url(./images/footer.png);
  text-align: center;
  margin-top: 200px;
}

.covered {
margin-bottom: 70px;
margin-top: 40px;
font-size: 24px;
width: 720px;
}

